--- a/project/frontend/src/app/components/about-franz/about-franz.component.scss
+++ b/project/frontend/src/app/components/about-franz/about-franz.component.scss
@@ -1,5 +1,5 @@
 .bg-custom {
-  background-image: url("../../assets/header/titelbild_impressum.jpg");
+  background-image: url("../../../assets/header/titelbild_impressum.jpg");
   background-repeat: no-repeat;
   background-size: cover ;
   background-position: top;
