--- a/project/frontend/src/app/components/galerie/galerie.component.html
+++ b/project/frontend/src/app/components/galerie/galerie.component.html
@@ -1,1 +1,192 @@
-<p>galerie works!</p>
+<section>
+  <div class="py-4"></div>
+  <div class="py-4"></div>
+  <div class="container">
+    <p class="h1 twhite text-center">Galerie / Impressionen</p>
+  </div>
+</section>
+
+<div class="py-5"></div>
+
+
+<section>
+  <div class="w-75 container">
+
+    <div class="border-bottom border-white">
+      <div class="w-50  ">
+        <p class="h3">Menschenbilder 28.01.2018, das Instrument der Engel- und Bengel
+          der Harfenbauer Franz Reschenhofer</p>
+        <p class="h4 py-5">Gestaltung Heinz Janisch</p>
+      </div>
+    </div>
+
+    <div class="border-bottom border-white py-5">
+      <div class="w-50  ">
+        <p class="h3 py-5">Alan Stivel ist begeistert von der
+          Reschenhofer Harfe!
+        </p>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-6 col-lg-6">
+          <div class="d-flex justify-content-center">
+            <img class="img-fluid py-4 h-md-75 w-75"
+                 src="assets/Galerie/harfe_2019_1.jpg" alt="">
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-6">
+          <div class="d-flex justify-content-center">
+            <img class="img-fluid py-4 h-md-75 w-75"
+                 src="assets/Galerie/harfe_2019_2.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="border-bottom border-white w-75 py-5 container">
+    <div class="row">
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="d-flex justify-content-center">
+          <img class="img-fluid py-4 h-md-75 "
+               src="assets/Galerie/IMG_4368-1024x768.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="d-flex justify-content-center">
+          <img class="img-fluid py-4 h-md-75 "
+               src="assets/Galerie/1306-1024x768.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="d-flex justify-content-center">
+          <img class="img-fluid py-4 h-md-75 "
+               src="assets/Galerie/1311-2.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="d-flex justify-content-center">
+          <img class="img-fluid py-4 h-md-75 "
+               src="assets/Galerie/JIBO5922_2.jpg" alt="">
+        </div>
+      </div>
+
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="d-flex justify-content-center">
+          <img class="img-fluid py-4 h-md-75 "
+               src="assets/Galerie/IMG_4920-001.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="d-flex justify-content-center">
+          <img class="img-fluid py-4 h-md-75 "
+               src="assets/Galerie/IMG_5338-768x1024.jpg" alt="">
+        </div>
+      </div>
+
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="d-flex justify-content-center">
+          <img class="img-fluid py-4 h-md-75 "
+               src="assets/Galerie/MXUU5988-1024x768.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="d-flex justify-content-center">
+          <img class="img-fluid py-4 h-md-75 "
+               src="assets/Galerie/NIZH1787-1024x768.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="d-flex justify-content-center">
+          <img class="img-fluid py-4 h-md-75 "
+               src="assets/Galerie/1301-3-e1528447807332.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="d-flex justify-content-center">
+          <img class="img-fluid py-4 h-md-75 "
+               src="assets/Galerie/QGBJ1285-1.jpg" alt="">
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="d-flex justify-content-center">
+          <img class="img-fluid py-4 h-md-75 "
+               src="assets/Galerie/RKBG6207-001.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="d-flex justify-content-center">
+          <img class="img-fluid py-4 h-md-75 "
+               src="assets/Galerie/Unbenannt-1.png" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="border-bottom border-white w-75 py-5 container">
+    <div class="row">
+
+      <div class="col-12 col-md-6 col-lg-6 py-4">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item py-4" src="https://www.youtube.com/embed/O5CHEa8rxAU"
+                  title="Cecilia - Tennesse whiskey // Soundset Turin" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-6 py-4">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/UH1PLAMHoPg"
+                  title="El Mestre, Arianna Savall &amp; Hirundo Maris" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-6 py-4">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/uI4pdrFeYcQ"
+                  title="Bendik og Årolilja: Arianna Savall &amp; Petter Udland Johansen" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-6 py-4">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vgTQBOgA6CM" title="Klangwelten"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-6 py-4">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-uAlL2Oe4aU"
+                  title="HANA BLAZIKOVA: ROSA DAS ROSAS" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen></iframe>
+        </div>
+      </div>
+
+
+    </div>
+
+
+  </div>
+
+
+</section>
