--- a/project/frontend/src/app/components/harfenlehrer/harfenlehrer.component.html
+++ b/project/frontend/src/app/components/harfenlehrer/harfenlehrer.component.html
@@ -1,1 +1,163 @@
-<p>harfenlehrer works!</p>
+<section>
+  <div class="container border-bottom border-white">
+    <div class="py-4"></div>
+    <div class="py-5"></div>
+    <p class="h2 twhite text-center">Harfenlehrer</p>
+    <div class="py-4"></div>
+    <div class="py-5"></div>
+  </div>
+</section>
+<section>
+  <div class="orange  ">
+    <div class="container border-bottom border-white">
+      <div class="row py-5">
+        <div class="col-12 col-md-6 col-lg-6">
+          <div class="d-flex justify-content-center">
+            <img class="img-fluid py-4  h-md-75 w-75"
+                 src="assets/Harfenlehrer/768.jpeg.crdownload" alt="">
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-5">
+          <p class="h2">Arianna Savall Figueras</p>
+          <p class="h5">Spanien / Schweiz </p> <br>
+          <p class="h5">Aus dem Schoße einer berühmten katalanischen Musikerfamilie studierte sie Harfe und Gesang am
+            Konservatorium in Barcelona. Anschließend Gesang- und Harfenausbildung sowie drei Jahre Opernstudium in der
+            Schweiz, Studium für mittelalterliche Musik und Historische Interpretationen in Frankreich.
+
+            Konzerte und Aufnahmen von alter Musik mit der Gruppe Hesperion XXI. Konzerte in ganz Europa, den
+            Vereinigten Staaten, Südamerika, Australien, Neuseeland und Israel. Sie arbeitete zusammen mit großen
+            Musikern an vielen Aufnahmen und gibt als Solistin Konzerte.
+
+            Österreichischen Musikfreunden ist sie durch ausverkaufte Konzerte im Wiener Konzerthaus und der Styriarte
+            bekannt, wo sie bei Aufführungen ihres Vaters Jordi Savall und internationalen Musikern mitwirkte.</p>
+          <br>
+          <p class="h5">Kurs für Harfe</p>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-6">
+          <div class="d-flex justify-content-center">
+            <img class="img-fluid py-4  h-md-75 w-75"
+                 src="assets/Harfenlehrer/Arianna-2k19.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="green ">
+      <div class="container border-bottom border-white">
+
+        <div class="row py-5">
+          <div class="col-12 col-md-6 col-lg-6">
+            <div class="d-flex justify-content-center">
+              <img class="img-fluid py-4  h-md-75 w-75"
+                   src="assets/Harfenlehrer/Petter-2k19.jpg" alt="">
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-5">
+            <p class="h2">Petter Udland Johannsen</p>
+            <p class="h5">Norwegen / Schweiz</p> <br>
+            <p class="h5">Geb. 1971 in Oslo, erhielt er dort auch seine erste Ausbildung in Gesang und Schauspiel.
+              Diplomstudium im Fach Gesang an der norwegischen Musikhochschule, Studium in Basel an der Scola Contorum
+              Basiliensis. Eine Ergänzung seines Gesangsstudiums findet bei dem Tenor Hans-Peter Blockwitz statt. Er ist
+              ebenso als Interpret alter Musik gefragt, wie auf der Opern- und Musicalbühne zu Hause.
+
+              Er wirkte bei Jordi Savall in Monteverdis „Orfeo“ mit, trat als Solist in zahlreichen Messen und Oratorien
+              auf.
+
+              Breitgefächerte Kammermusikprogramme wie Liederabende oder mittelalterliche Gesangsquartete zeugen von der
+              Bandbreite seiner Tätigkeit.</p>
+            <br>
+            <p class="h5">Kurs für Gesang</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="orange">
+      <div class="container  border-bottom border-white">
+        <div class="row py-5">
+          <div class="col-12 col-md-6 col-lg-6">
+            <div class="d-flex justify-content-center">
+              <img class="img-fluid py-4  h-md-75 w-75"
+                   src="assets/Harfenlehrer/profilbild-dimitri.jpg" alt="">
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-5">
+            <p class="h2">Dimitri Boekhoorn</p>
+            <p class="h5">Bretagne / Frankreich </p> <br>
+            <p class="h5">Dimitri Boeksboorn wurde in den Niederlanden geboren und lebt seit vielen Jahren in der
+              Bretagne.
+              Er ist Lehrer für Harfenmusik auf traditionellen historischen, keltischen, mittelalterlichen Harfen.
+              Er lehrt auch das Spiel auf irischen und historischen Flöten. Sein Repertoire umfasst Musik aus den
+              keltischen Ländern und alte Musik sowie seine eigenen Kompositionen.An der Universität Renns absolvierte
+              er ein Studium für keltische Kultur und Sprache und unterrichtete dort.Seit 1988 spielt er traditionelle
+              keltische Musik aus den Ländern Irland, Schottland, Wales und der Bretagne sowie eigene Kompositionen. Er
+              ist bekannt für seine traditionelle, leichte, schnelle und kunstvolle Spieltechnik. Diese einzigartige
+              Technik des Zupfens der Metallsaiten mit den Nägeln führt zurück auf die mittelalterliche schottische,
+              walisische, und bretonische Tradition des Harfenspiels. Er war Gast bei verschiedensten internationalen
+              Festivals:
+              celtique Festival von Lorient , keltisches Harfe Festival in Edinburgh, Dinan, Porto und Vevey, dem
+              Mittelalterfest Largentière der Folkwoods, Festival du Périgord Barockstraße der Irish Association of
+              Paris, dem Parlament der Bretagne.
+              Er gab regelmäßig Konzerte mit dem renommierten Musiker Carlos Núñez.Dimitri spielt außerdem
+              mitverschiedensten traditionellen irischen und schottischen Musikgruppen. Seine Auftritte mit der Harfe
+              führten ihn in die verschiedensten Länder Europas.</p>
+            <br>
+            <p class="h5">Kurs für Harfe</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="green ">
+      <div class="container border-bottom border-white">
+
+        <div class="row py-5">
+          <div class="col-12 col-md-6 col-lg-6">
+            <div class="d-flex justify-content-center">
+              <img class="img-fluid py-4 border-white  h-md-75 w-75"
+                   src="assets/Harfenlehrer/Robin-Huw-Bowen-Profilbild.jpg" alt="">
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-5">
+            <p class="h2">Robin Huw Bowen</p>
+            <p class="h5">Robin Huw Bowen ist ein Künstler, der das Herzstück der Musiktradition von Wales seit 25
+              Jahren mit Liedern auf der Trippelharfe repräsentiert. Er ist einer der weltweit wenigen professionellen
+              Waliser Tripelharfenspieler und einer der bedeutendsten Vertreter der walisischen Volksmusiktradition.
+
+              Sein Repertoire spiegelt die traditionelle walisische Musik wieder, deren Wissen beinahe verloren ging. Er
+              bezieht sich sowohl auf eigene Forschungen wie auch auf die authentischen Techniken, die er von Musikern
+              der alten Tradition überliefert bekam.
+
+              Er hat viele Musikstücke die man verloren glaubte , erforscht, aufgenommen und veröffentlicht und sie
+              Musikern auf der ganzen Welt auf der Trippelharfe nähergebracht.
+
+              Seine Interpretation und sein Spiel werden durch seine Persönlichkeit und die Kraft seiner Kunstfertigkeit
+              vertieft. Er vermittelt die typischen walisischen Tänze und Melodien mit ihrer Geschichte, wie auch ihren
+              speziellen Tonarten und Verzierungen.</p>
+            <br>
+            <p class="h5">Kurs für Gesang</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="orange ">
+      <div class="container border-bottom border-white">
+        <div class="row py-5">
+          <div class="col-12 col-md-6 col-lg-6">
+            <div class="d-flex justify-content-center">
+              <img class="img-fluid py-4  h-md-75 w-75"
+                   src="assets/Harfenlehrer/Apollonia2.jpg" alt="">
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-5">
+            <p class="h2">Apollonia Maria Oktavia Urbani</p>
+            <p class="h5">lebte nach dem Studium der Naturwissenschaften vier Jahre in St Andrews, Schottland. Dort kam sie zum ersten Mal mit der keltischen Harfe in Berührung. Ihre ersten Lehrmeisterinnen waren Elan MacKenzie und Fiona Davidson, die sie die bardische Tradition des Harfespielens und keltische Kulturgeschichte lehrten.
+              Seit Jahren vermittelt sie auch immer wieder Anfänger das Spiel auf der Harfe.</p>
+            <br>
+            <p class="h5">Kurs für Harfe</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
