--- a/project/frontend/src/app/components/impressum/impressum.component.html
+++ b/project/frontend/src/app/components/impressum/impressum.component.html
@@ -1,1 +1,64 @@
-<p>impressum works!</p>
+<section class="bg-custom">
+  <div class="py-3"></div>
+  <div class="py-4"></div>
+  <p class="text-center align-center h1 py-5">Impressum</p>
+</section>
+
+<section class="orange">
+  <div class="container w-75 py-5">
+    <p class="h1 text-center">Harfenbau Reschenhofer</p>
+    <p class="h4 py-5 text-center">
+      Franz Reschenhofer <br>
+      Handenberg 25 <br>
+      A-5144 Handenberg <br>
+
+      Telefon 0043 (0) 7748 8339 <br>
+      Mobil 0043 (0) 676 630 8667 <br>
+
+      E-Mail: info@harfenbau.at <br>
+      Internet: www.harfenbau.at <br>
+
+      Inhaber: Franz Reschenhofer <br>
+      Freischaffender Künstler <br>
+      Gerichtsstand: Braunau am Inn <br>
+      Firmensitz: Handenberg <br>
+
+      Anwendbare Rechtsvorschriften: www.ris.bka.gv.at</p>
+  </div>
+</section>
+
+<section>
+  <div class="container w-75 py-5">
+    <p class="h5">datenschutz
+      google analytics – übersicht
+      Google Analytics ist ein Webanalyse-Tool, mit dessen Hilfe Website-Inhaber die Interaktion der Besucher mit ihren Websites analysieren können. Google Analytics-Kunden können eine Reihe verschiedener Berichte anzeigen. In diesen Berichten wird dargestellt, wie die Besucher mit ihren Websites interagieren. Mit diesen Daten kann der Google Analytics-Kunde seine Website verbessern. Diese von Google Analytics erfassten Informationen sind anonym. Es werden hierbei nur Website-Trends ermittelt. Der einzelne Besucher bleibt dabei unerkannt.
+
+      Für Website-Inhaber, die Google Analytics einsetzen, sind Datenschutzbestimmungen erforderlich, in denen die Nutzung von Google Analytics vollständig dargelegt wird.
+
+      datenschutzbestimmungen von google
+      Google schätzt Ihr entgegengebrachtes Vertrauen sehr und weiß um die Verantwortung, Ihre Daten zu schützen. Ein Teil der Verantwortung ist es, Sie darüber zu informieren, welche Daten erfasst werden, wenn Sie unsere Produkte und Services nutzen. Zudem klären wir Sie darüber auf, warum wir diese Daten erfassen und wie diese eingesetzt werden, um Ihre Erfahrung mit den Google-Produkten und -Services zu verbessern. Die Datenschutzbestimmungen von Google beschreiben, was mit persönlichen Informationen geschieht, wenn Sie Google-Produkte und -Services wie Google Analytics nutzen.
+
+      google analytics-cookies
+      Google Analytics nutzt wie viele andere Services zum Analysieren von Besucherinteraktionen „First-Party“-Cookies. Mit diesen Cookies werden Informationen gespeichert. Dazu gehören beispielsweise die Zeitangabe zum Website-Besuch, die Häufigkeit, mit der der Besucher die Website aufgerufen hat, und von wo aus der Besucher auf die Website gelangt ist. „First-Party“-Cookies werden von Browsern nicht domainübergreifend zugänglich gemacht.
+
+      nutzung der ip-adresse
+      Computer und Geräte, die mit dem Internet verbunden sind, erhalten eine eindeutige Nummer zugewiesen, die sogenannte IP-Adresse. Da diese Nummern üblicherweise in länderbasierten Blöcken zugewiesen werden, kann eine IP-Adresse oftmals dazu verwendet werden, das Land (den Staat oder die Stadt) zu identifizieren, in dem mit diesem Computer eine Verbindung mit dem Internet hergestellt wird. Google Analytics erfasst die IP-Adressen der Website-Besucher. So kann der Website-Inhaber analysieren, aus welchen Teilen der Welt seine Besucher stammen. Diese Methode wird als Geotargeting von IP-Adressen bezeichnet.
+
+      Die tatsächlichen IP-Adressinformationen werden von Google Analytics nicht an die Google Analytics-Kunden weitergegeben. Außerdem wird die IP-Masken-Methode eingesetzt: Website-Inhaber, die Google Analytics nutzen, können es so einstellen, dass anstelle der gesamten IP-Adresse nur ein Teil davon für das Geotargeting verwendet wird. Website-Inhaber haben generell Zugriff auf die IP-Adressen ihrer Website-Besucher, unabhängig von der Nutzung von Google Analytics.
+
+      persönliche daten
+      Persönliche Daten sind Informationen, die Sie persönlich identifizieren. Dazu gehören Daten wie Name, E-Mail-Adresse, Zahlungsinformationen und andere Daten, die im unmittelbaren Zusammenhang mit derartigen Informationen stehen. Die Nutzungsbedingungen von Google Analytics, die sämtliche Google Analytics-Kunden einhalten müssen, untersagen die Nachverfolgung bzw. Sammlung solcher Informationen mit Google Analytics. Weiterhin dürfen keine persönlichen Informationen mit Webanalysedaten verknüpft werden.
+
+      verwendung der daten aus google analytics
+      Website-Inhaber, die Google Analytics einsetzen, können festlegen, welche Daten von Google verwendet werden dürfen. Diese Freigabe bzw. Untersagung wird mit den Google Analytics-Datenfreigabeoptionen eingestellt. Darf Google die Daten verwenden, werden diese zum Verbessern von Google-Produkten und -Services eingesetzt. Diese Optionen können jederzeit vom Website-Inhaber geändert werden.
+
+      Weitere Informationen zu den Datenfreigabeoptionen
+
+      deaktivierungs-funktion für den browser
+      Das Deaktivierungs-Add-on für Browser von Google Analytics gibt dem Website-Besucher mehr Kontrolle darüber, welche Daten zu aufgerufenen Websites von Google Analytics erfasst werden. Das Add-on teilt dem JavaScript (ga.js) von Google Analytics mit, dass keine Informationen zum Website-Besuch an Google Analytics übermittelt werden sollen. Das Deaktivierungs-Add-on für Browser von Google Analytics verhindert nicht, dass Informationen an die Website oder an andere Webanalyse-Services übermittelt werden.
+
+      Weitere Informationen zum Deaktivierungs-Add-on für Browser von Google Analytics
+
+    </p>
+  </div>
+</section>
