--- a/project/frontend/src/app/components/kontakt/kontakt.component.html
+++ b/project/frontend/src/app/components/kontakt/kontakt.component.html
@@ -1,1 +1,66 @@
-<p>kontakt works!</p>
+<section class="bg-custom">
+  <div class="py-5"></div>
+  <div class="py-4"></div>
+  <p class="text-center align-center h1 py-5">Kontakt</p>
+</section>
+
+<section>
+  <div class="py-5"></div>
+  <div class="container w-75 py-5">
+    <p class="h3">Ein Besuch in meiner Werkstätte wird sicherlich ein Erlebnis für Sie sein und meinerseits eine Freude
+      Sie beraten zu können und Ihnen meine Harfen zu präsentieren.
+    </p>
+  </div>
+  <div class="py-5"></div>
+
+</section>
+
+<div class="embed-responsive embed-responsive-16by9 h-50">
+  <iframe class="embed-responsive-item"
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5325.267399582179!2d13.010017!3d48.136587!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47742d895ebb662f%3A0x4a44db27ed0e4a0e!2sHandenberg%2025%2C%205144%20Handenberg%2C%20%C3%96sterreich!5e0!3m2!1sde!2sus!4v1690794693543!5m2!1sde!2sus"
+          width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+
+<section class="orange">
+  <div class="container w-50 py-5">
+
+    <p class="h2">Wegbeschreibung</p>
+    <p class="h3">So finden Sie zu mir:</p>
+    <br>
+    <p class="h4">Von Salzbug (Autobahnabfahrt Sbg.Nord,) dann Richtung Bergheim Oberndorf, Lamprechtshausen die B 156
+      Richtung Braunau, 18 km vor Braunau liegt linker Hand Handenberg und meine Werkstatt.
+      <br><br>
+      Von BRAUNAU kommend (weiter Richtung Salzburg auf derB156), Richtung NEUKIRCHEN, nach ca. 6km HANDENBERG an der
+      Tankstelle rechts abbiegen, den Berg hoch (Handenberg) und nach dem Walde gleich links. So sind Sie bei mir.
+      <br><br>
+      Vorherige Anmeldung ist notwendig. Sie erreichen mich jederzeit telefonisch unter: 0043 (0) 676 63 08 667 oder
+      0043 (0) 7748 83 39</p>
+
+  </div>
+  <div class="container w-50 py-5">
+    <p class="h2">Kontakt</p>
+    <p class="h4">
+      HARFENBAU RESCHENHOFER
+      <br>
+      Franz Reschenhofer
+      <br>
+      Handenberg 25
+      <br>
+      A-5144 Handenberg
+      <br>
+      Telefon 0043 (0) 7748 8339
+      <br>
+
+      Mobil 0043 (0) 676 630 8667
+      <br>
+      Fax 0043 / (0) 77 48 / 83 39
+      <br>
+      E-Mail: info@harfenbau.at
+      <br>
+      Internet: www.harfenbau.at
+      <br>
+
+    </p>
+  </div>
+</section>
