--- a/project/frontend/src/styles.scss
+++ b/project/frontend/src/styles.scss
@@ -41,6 +41,12 @@ body {
 .green{
   background-color: #a1b54c;
 }
+.twhite{
+  color:#ffffff;
+}
+.tblack{
+  color: black;
+}
 
 
 $section-orange: #daa520;
