--- a/project/frontend/src/app/components/seminare/seminare.component.html
+++ b/project/frontend/src/app/components/seminare/seminare.component.html
@@ -1,1 +1,14 @@
-<p>seminare works!</p>
+<section class="bg-custom">
+  <div class="py-5"></div>
+  <div class="py-4"></div>
+  <p class="text-center align-center h1 py-5">Seminare</p>
+</section>
+
+
+<section>
+  <div class="py-3"></div>
+  <div class="container w-75 py-3 border-bottom border-white">
+    <p class="h1 py-2">Aktuelles:</p>
+    <p class="h2">Derzeit keine Seminare</p>
+  </div>
+</section>
